[package]
name = "glob1rs"
version = "0.1.0"
edition = "2021"
authors = ["Stéphane Magnenat <stephane.magnenat@enlighware.ch>", "Luc-Olivier de Charrière <NuageBleu@gmail.com>"]
license = "GPL-3.0-only"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
rand = "0.8"
log = "0.4"
env_logger = "0.9"
bevy = "0.7"
bevy_simple_tilemap = "0.8"
cgmath = "0.18"
num_enum = "0.5"
delegate = "0.6.2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# When in release, do link-time optimization
[profile.release]
lto = "thin"